--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "angular-swiper": "^0.4.0",
     "es6-shim": "^0.35.3",
     "es5-shim": "^4.5.9",
-    "ng-scrollbars": "^0.0.11"
+    "ng-scrollbars": "^0.0.11",
+    "iscroll": "https://github.com/cubiq/iscroll.git#^5.2.0"
   },
   "resolutions": {
     "angular": "1.4.6"
